# OpenMandrel

./: CMakeLists.txt  LICENSE  README.md  imgui.ini
openmandrel/: axisymmetric_winder.cpp  axisymmetric_winder.h  gui.cpp  main.cpp  mandrel.cpp  mandrel.h  math.cpp  math.h  virtual_winder.cpp  virtual_winder.h  winder.h
